--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,7 +32,14 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "vite": "https://esm.sh/vite@^7.3.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/"
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "matter-js": "https://esm.sh/matter-js@^0.20.0",
+    "three": "https://esm.sh/three@0.170.0",
+    "three/examples/jsm/environments/RoomEnvironment.js": "https://esm.sh/three@0.170.0/examples/jsm/environments/RoomEnvironment.js",
+    "gsap": "https://esm.sh/gsap@3.12.5",
+    "gsap/Observer": "https://esm.sh/gsap@3.12.5/Observer",
+    "three/": "https://esm.sh/three@^0.182.0/",
+    "gsap/": "https://esm.sh/gsap@^3.14.2/"
   }
 }
 </script>
