--- a/index.html
+++ b/index.html
@@ -7,31 +7,67 @@
     <title>Reelywood Studio | AI Marketing & Branding</title>
     <link rel="icon" type="image/png" href="https://mc2szw5s8xk9lkkh.public.blob.vercel-storage.com/reelywood-logo-p-500.png" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            fontFamily: {
+              lexend: ['Lexend', 'sans-serif'],
+              display: ['Archivo Black', 'sans-serif'],
+            },
+            colors: {
+              purple: '#834bf1',
+              yellow: '#ffde59',
+            }
+          }
+        }
+      }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Fira+Code:wght@400;500&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Lexend:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
-      body {
-        font-family: 'Plus Jakarta Sans', sans-serif;
+      :root {
+        --purple: #834bf1;
+        --white: #FFFFFF;
+        --black: #000000;
+        --yellow: #ffde59;
+      }
+      html {
         scroll-behavior: smooth;
       }
+      body {
+        font-family: 'Lexend', sans-serif;
+        background-color: var(--white);
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+      .dark body {
+        background-color: #0a0a0a;
+        color: var(--white);
+      }
       .font-display {
-        font-family: 'Space Grotesk', sans-serif;
+        font-family: 'Archivo Black', sans-serif;
       }
-      .font-cursive {
-        font-family: 'Dancing Script', cursive;
+      .neo-border {
+        border: 4px solid var(--black);
       }
-      .font-mono-custom {
-        font-family: 'Fira Code', monospace;
+      .dark .neo-border {
+        border-color: var(--white);
       }
-      .gradient-blur {
-        background: radial-gradient(circle at 50% 50%, rgba(99, 102, 241, 0.15) 0%, rgba(255, 255, 255, 0) 70%);
+      .neo-shadow {
+        box-shadow: 6px 6px 0px 0px var(--black);
       }
-      .glass-card {
-        background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.2);
+      .dark .neo-shadow {
+        box-shadow: 6px 6px 0px 0px var(--white);
+      }
+      .text-stroke {
+        -webkit-text-stroke: 1.5px var(--black);
+        text-shadow: 3px 3px 0px var(--black);
+      }
+      .dark .text-stroke {
+        -webkit-text-stroke: 1.5px var(--white);
+        text-shadow: 3px 3px 0px var(--white);
       }
     </style>
   <script type="importmap">
@@ -56,7 +92,7 @@
 }
 </script>
 </head>
-  <body class="bg-white text-slate-900 antialiased overflow-x-hidden">
+  <body class="bg-white dark:bg-[#0a0a0a] text-slate-900 dark:text-white antialiased overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
