--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reelywood Studio | AI Marketing & Branding</title>
-    <link rel="icon" type="image/png" href="https://mc2szw5s8xk9lkkh.public.blob.vercel-storage.com/reelywood-logo-p-500.png" />
+    <link rel="icon" href="https://izz9qoicna213xwc.public.blob.vercel-storage.com/Untitled%20design%20%281%29.mp4" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
